--- a/prob2/Homework 3.ipynb
+++ b/prob2/Homework 3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e21382972baecbbd6d6224d0ddb442bd6bf6510ef7dcb5e7c7fe2a9a3612e407"
+  "signature": "sha256:add51684e63e2bdff4c10a54ea30f8ebfda920e32a12aa8c2108d83d7471973d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -114,35 +114,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<h3>5.3-2.</h3> Let X 1 and X 2 be independent random variables with respective binomial distributions b(3, 1/2) and\n",
+      "<h3>5.3-2.</h3> Let $X_1$ and $X_2$ be independent random variables with respective binomial distributions b(3, 1/2) and\n",
       "b(5, 1/2). Determine\n",
-      "(a) $P(X_1 = 2, X_2 = 4)$.\n",
-      "(b) $P(X_1 + X_2 = 7)$."
+      "\n",
+      "(a) $\\mathbb{P}(X_1 = 2, X_2 = 4) = \\mathbb{P}(X_1 = 2)\\mathbb{P}( X_2 = 4) = 0.375*0.156 = 0.0585$.\n",
+      "\n",
+      "(b) $P(X_1 + X_2 = 7)$.\n",
+      "\n",
+      "Setting $Y = X_1 + X_2$. We can see that the space we are interested in is when $(X_1, X_2) = (3,4)$ and $(X_1, X_2) = (2,5)$. Thus we are interested in $\\mathbb{P}(X_1 = 3, X_2 = 4) + \\mathbb{P}(X_1 = 2, X_2 = 5)$ which yields\n",
+      "\n",
+      "$$\\mathbb{P}(X_1 + X_2 = 7) = 0.03125$$"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from scipy.stats import f\n",
-      "1/f.ppf(.95,24,9)\n",
-      "f.ppf(.05,9,24)\n",
-      "f.cdf(2.7,9,24)\n",
-      "f.cdf(.277,9,24)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 12,
-       "text": [
-        "0.025092778981125684"
-       ]
-      }
-     ],
-     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -150,7 +132,19 @@
      "source": [
       "<h3>5.3-6.</h3> Let $X_1$ and $X_2$ be a random sample of size n = 2\n",
       "from a distribution with pdf f (x) = 6x(1 \u2212 x), 0 < x < 1.\n",
-      "Find the mean and the variance of $Y = X_1 + X_2$ ."
+      "Find the mean and the variance of $Y = X_1 + X_2$ .\n",
+      "\n",
+      "According to the book, the mean and the variance of $Y = \\sum a_i X_i$ are, respectively\n",
+      "\n",
+      "$$\\mu_Y = \\sum a_i \\mu_i ~~~~\\text{and}~~~~\\sigma_Y^2 = \\sum a_i^2 \\sigma_i^2$$\n",
+      "\n",
+      "$$\\mu_i = \\int 6x^2(1-x)dx = \\frac 1 2$$\n",
+      "\n",
+      "$$\\sigma_i^2 = \\int 6x^3(1-x)dx - \\frac 1 4 = \\frac 3 {10}$$\n",
+      "\n",
+      "and therefore,\n",
+      "\n",
+      "$$\\mu_Y = 1 ~~~~\\text{and}~~~~\\sigma_Y^2 = \\frac 3 5$$"
      ]
     },
     {
@@ -159,7 +153,17 @@
      "source": [
       "<h3>5.4-2.</h3> Let $X_1$ and $X_2$ have independent distributions\n",
       "$b(n_1 , p)$ and $b(n_2 , p)$. Find the mgf of $Y = X_1 + X_2$ . How\n",
-      "is Y distributed?"
+      "is Y distributed?\n",
+      "\n",
+      "The book supplies us with the following formula:\n",
+      "\n",
+      "$$M_Y(t) = \\mathbb{E}(e^{tX_1}) \\mathbb{E}(e^{tX_2})$$\n",
+      "\n",
+      "Plugging in the formulas from the front cover, we have:\n",
+      "\n",
+      "$$M_Y(t) = (1 -p + pe^t)^{n_1}(1 -p + pe^t)^{n_2} = (1 -p + pe^t)^{n_1+n_2}$$\n",
+      "\n",
+      "We naturally recognize this as a binomial distribution with $n = n_1 + n_2$ and probability $=p$. "
      ]
     },
     {
@@ -168,16 +172,18 @@
      "source": [
       "<h3>5.4-8.</h3> Let $W = X_1 + X_2 + \u00b7 \u00b7 \u00b7 + X_h$ , a sum of h mutually\n",
       "independent and identically distributed exponential random variables with mean \u03b8 . Show that W has a gamma\n",
-      "distribution with parameters \u03b1 = h and \u03b8 , respectively."
+      "distribution with parameters \u03b1 = h and \u03b8 , respectively.\n",
+      "\n",
+      "This is basically the same problem as above. The book supplies us with the following formula:\n",
+      "\n",
+      "$$M_Y(t) = \\prod_{i =1}^n M(t) = [M(t)]^n$$\n",
+      "\n",
+      "Therefore,\n",
+      "\n",
+      "$$M_W(t) = \\left[ \\frac 1 {1 -\\theta t}\\right]^h$$\n",
+      "\n",
+      "which is just the gamma distribution with parameters $\\alpha = h$ and $\\theta$."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
