--- a/prob2/Homework 3.ipynb
+++ b/prob2/Homework 3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:add51684e63e2bdff4c10a54ea30f8ebfda920e32a12aa8c2108d83d7471973d"
+  "signature": "sha256:13e43ecfa92e44455bb2c0e1673478fc07b096497a5d76f76c99adf412d374be"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -140,11 +140,11 @@
       "\n",
       "$$\\mu_i = \\int 6x^2(1-x)dx = \\frac 1 2$$\n",
       "\n",
-      "$$\\sigma_i^2 = \\int 6x^3(1-x)dx - \\frac 1 4 = \\frac 3 {10}$$\n",
+      "$$\\sigma_i^2 = \\int 6x^3(1-x)dx - \\frac 1 4 = \\frac 3 {10} - \\frac 1 4 = \\frac 1 {20}$$\n",
       "\n",
       "and therefore,\n",
       "\n",
-      "$$\\mu_Y = 1 ~~~~\\text{and}~~~~\\sigma_Y^2 = \\frac 3 5$$"
+      "$$\\mu_Y = 1 ~~~~\\text{and}~~~~\\sigma_Y^2 = \\frac 1 {10}$$"
      ]
     },
     {
