--- a/ML/Octave Practice.ipynb
+++ b/ML/Octave Practice.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c1d99c0f96c364ba5bce6fb5480f66966b444b2723ac094a5e1008b64575ca85"
+  "signature": "sha256:8be90840e24714cc068bc43864a09817c7fcd9dfda616fe8a198492ecc53516d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -40,7 +40,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Obviously I needed to learn more, so I googled \"octave tutorial\" and the first site that popped up was [this](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial). From that site, I read 4 short articles: [Getting Started](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial/Getting_started), [Vectors and Matrices](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial/Vectors_and_matrices), [Loops and Conditions](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial/Loops_and_conditions), and [Writing Functions](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial/Writing_functions). After reading those four articles I felt ready to implement the algorithm (knowing that I would make frequent calls to google).\n",
+      "Obviously I needed to learn more, so I googled \"octave tutorial\" and the first site that popped up was [this](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial). From that site, I worked through 4 short articles: [Getting Started](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial/Getting_started), [Vectors and Matrices](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial/Vectors_and_matrices), [Loops and Conditions](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial/Loops_and_conditions), and [Writing Functions](http://en.wikibooks.org/wiki/Octave_Programming_Tutorial/Writing_functions). After working through those four articles I felt ready to implement the algorithm (knowing that I would make frequent calls to google).\n",
       "\n",
       "First thing to do was to generate some random data points. What I wanted to do was generate the exact same random numbers that I used in my python implementation, but this proved impossible (you can read a discussion on this [here](http://stackoverflow.com/questions/13735096/python-vs-octave-random-generator)).\n",
       "\n",
