and i got pinv working

--- a/ML/hand_written.ipynb
+++ b/ML/hand_written.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0a1209053472ce24bff113056522165593c6707a3354415fffa728a5d297ec49"
+  "signature": "sha256:0afab61982f649283364cae5328d7ebc242c66a2c187509dfed7848975b70cca"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -198,6 +198,51 @@
       }
      ],
      "prompt_number": 96
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = randn(3,3)\n",
+      "a"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 100,
+       "text": [
+        "array([[ 0.42867439,  1.48232772, -0.66338804],\n",
+        "       [-1.02956526,  0.8279321 ,  0.29181708],\n",
+        "       [ 0.91304466, -0.39634572, -0.15222082]])"
+       ]
+      }
+     ],
+     "prompt_number": 100
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pinv(a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 99,
+       "text": [
+        "array([[-0.01071907,  0.63311948,  1.2090842 ],\n",
+        "       [ 1.0137108 ,  0.20122098, -1.94669643],\n",
+        "       [ 0.26452853,  0.50466261, -1.04441241]])"
+       ]
+      }
+     ],
+     "prompt_number": 99
     },
     {
      "cell_type": "code",
