prob hw finished

--- a/prob2/Homework 5.ipynb
+++ b/prob2/Homework 5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9ecac9b0cb931515bf04db605dfcd453540be3639001d17edd9eb7bc54bb7ba9"
+  "signature": "sha256:be8b220ef2b50ccaf28a8acea3090256e84ec298708e9713710e57fe60955d4d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "5.8-2. If E($X$) = 17 and E($X^2$) = 298, use Chebyshev\u2019s\n",
+      "<h3>5.8-2.</h3> If E($X$) = 17 and E($X^2$) = 298, use Chebyshev\u2019s\n",
       "inequality to determine\n",
       "\n",
       "(a) A lower bound for P(10 < $X$ < 24).\n",
@@ -36,11 +36,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "5.8-6. Let X be the mean of a random sample of size\n",
-      "n = 15 from a distribution with mean \u03bc = 80 and variance \u03c3 2 = 60. Use Chebyshev\u2019s inequality to find a lower\n",
-      "bound for P(75 < X < 85).\n",
+      "<h3>5.8-6.</h3> Let $\\bar X$ be the mean of a random sample of size\n",
+      "$n = 15$ from a distribution with mean $\\mu = 80$ and variance $\\sigma^2 = 60$. Use Chebyshev\u2019s inequality to find a lower\n",
+      "bound for $\\mathbb{P}(75 < \\bar{X} < 85)$.\n",
       "\n",
-      "$$\\mathbb{P}(75 < X < 85) = \\mathbb{P}(|X-80|\\leq 5) \\geq 1 - \\frac {60} {5^2} = -1.4 \\geq 0$$"
+      "$$\\mathbb{P}(75 < \\bar X < 85) = \\mathbb{P}(|\\bar X-80|\\leq 5) \\geq 1 - \\frac {60} {15*5^2} = 0.84$$"
      ]
     },
     {
@@ -54,7 +54,7 @@
       "$$\\mathbb{P}(X \\leq 2) =\\frac {\\lambda^0 e^{-\\lambda}}{0!}+\\frac {\\lambda^1 e^{-\\lambda}}{1!} +\\frac {\\lambda^2 e^{-\\lambda}}{2!}$$\n",
       "\n",
       "\n",
-      "Let $\\lambda = 0.005/400 = 0.0000125$ which yields a probability of $0.9999999999999997$"
+      "Let $\\lambda = 0.005*400 = 2$ which yields a probability of $0.6767$"
      ]
     },
     {
