finished with homework 7

--- a/prob2/Homework 7.ipynb
+++ b/prob2/Homework 7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4fa77f491822837f5b2c2370357fae2ed6360b62c85c0f7b3e74cebfa3c507c0"
+  "signature": "sha256:1fc98e70c5cfd40253a6b8976a5d9a1ec0d1d56e6065cbfba7c0b0758abcc0c9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -87,14 +87,26 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<h3>6.4-8.</h3> Let $f (x;\\theta) = (1/\\theta)x (1\u2212\\theta)/\\theta ~~~$ ,  $~~0 < x < 1, ~~~0 < \\theta < \\infty$\n",
-      "\u221e.\n",
+      "<h3>6.4-8.</h3> Let $f (x;\\theta) = (1/\\theta)x^{(1\u2212\\theta)/\\theta} ~~~$ ,  $~~0 < x < 1, ~~~0 < \\theta < \\infty$.\n",
       "\n",
       "(a) Show that the maximum likelihood estimator of $\\theta$ is\n",
       "$\\hat{\\theta} = \u2212(1/n) \\sum_{i=1}^n ln X_i$ .\n",
       "\n",
+      "$$L(\\theta) = \\prod \\frac 1 {\\theta} x_i^{(1-\\theta)/\\theta} $$\n",
+      "\n",
+      "$$ln(L) = \\sum [ -ln(\\theta) + \\frac {(1-\\theta)}{\\theta} ln(x_i)]$$\n",
+      "\n",
+      "$$0 = \\frac d {d\\theta} ln(L) = -\\frac n {\\theta} - \\frac {\\sum ln(x_i)}{\\theta} - \\frac {(1-\\theta)}{\\theta} \\sum ln(x_i)$$\n",
+      "\n",
+      "$$\\rightarrow \\hat{\\theta} = \u2212(1/n) \\sum_{i=1}^n ln( X_i)$$.\n",
+      "\n",
       "(b) Show that $E( \\hat{\\theta} ) = \\theta$ and thus that $\\hat{\\theta}$ is an unbiased\n",
-      "estimator of $\\theta$ ."
+      "estimator of $\\theta$ .\n",
+      "\n",
+      "I'm just going to do it for n=1. The general case seems like some rather hairy mathematics, and I'd rather skip it.\n",
+      "\n",
+      "$$E(\\hat{\\theta}) = \\int \\frac {ln(x)}{\\theta} x^{(1-\\theta)/\\theta}dx = - \\int \\frac 1 {\\theta} \\frac {x^{(1-\\theta)/\\theta}}{[1 +(1-\\theta)/\\theta]} = \\theta$$\n",
+      "\n"
      ]
     },
     {
@@ -107,8 +119,15 @@
       "(a) Use the method of moments to find a point estimate\n",
       "for p.\n",
       "\n",
+      "The geometric distribution is defined to have the distribution: $f(x) = (1-p)^{x-1}p$\n",
+      "\n",
+      "$$\\mu = \\frac 1 p~~~~ \\rightarrow p = \\frac 1 {\\bar{X}} $$  \n",
+      "\n",
+      "\n",
       "(b) Explain intuitively why your estimate makes good\n",
       "sense.\n",
+      "\n",
+      "As $\\bar{X}$ goes up, that means that we need more trials before we had a success, which would imply that the probability of success is low.\n",
       "\n",
       "(c) Use the following data to give a point estimate of p:\n",
       "\n",
@@ -130,6 +149,29 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data = [3, 34, 7, 4, 19, 2, 1, 19, 43, 2, 22, 4, 19, 11, 7, 1, 2, 21, 15, 1]\n",
+      "mean = sum(data)/len(data)\n",
+      "p = 1/mean\n",
+      "p"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "0.08438818565400844"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -140,12 +182,20 @@
       "\n",
       "(a) Show that $\\bar{X} = Y/n$ is an unbiased estimator of p.\n",
       "\n",
+      "$$\\mathbb{E}(\\bar X ) = \\sum_{i= 0}^n \\sum_{x_i = 0}^1  \\frac 1 n  x_i p^{ x_i} (1 - p)^{1 -x_i} = number~of~successes * p/n = ?$$\n",
+      "\n",
       "(b) Show that $Var(\\bar{X}) = p(1 \u2212 p)/n$.\n",
+      "\n",
+      "$$\\mathbb{E}(\\bar X^2 ) = \\sum_{i= 0}^n \\sum_{x_i = 0}^1 \\frac 1 {n^2}  x_i^2 p^{x_i} (1 - p)^{1- x_i}  = number~of~successes *p(1-p)/ n^2$$\n",
       "\n",
       "(c) Show that $E[\\bar{X}(1 \u2212 \\bar{X})/n] = (n \u2212 1)[p(1 \u2212 p)/n^2 ]$.\n",
       "\n",
+      "$$E[\\bar{X}(1 \u2212 \\bar{X})/n] = E[\\bar{X}]/n -  E(\\bar X^2 ) /n = p/n - p(1-p)/n^2 \n",
+      "\n",
       "(d) Find the value of c so that $c\\bar{X}(1 \u2212 \\bar{X})$ is an unbiased\n",
-      "estimator of $Var(\\bar{X}) = p(1 \u2212 p)/n$."
+      "estimator of $Var(\\bar{X}) = p(1 \u2212 p)/n$.\n",
+      "\n",
+      "$$c = n/(n-1)  ~~~maybe?$$"
      ]
     },
     {
