finished with homework~ 7

--- a/prob2/Homework 7.ipynb
+++ b/prob2/Homework 7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1fc98e70c5cfd40253a6b8976a5d9a1ec0d1d56e6065cbfba7c0b0758abcc0c9"
+  "signature": "sha256:e3c21805a042ba809327c4e52d6e467abe0d09417947ea8e8652e0feb88e1615"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -190,7 +190,7 @@
       "\n",
       "(c) Show that $E[\\bar{X}(1 \u2212 \\bar{X})/n] = (n \u2212 1)[p(1 \u2212 p)/n^2 ]$.\n",
       "\n",
-      "$$E[\\bar{X}(1 \u2212 \\bar{X})/n] = E[\\bar{X}]/n -  E(\\bar X^2 ) /n = p/n - p(1-p)/n^2 \n",
+      "$$E[\\bar{X}(1 \u2212 \\bar{X})/n] = E[\\bar{X}]/n -  E(\\bar X^2 ) /n = p/n - p(1-p)/n^2 \\neq (n \u2212 1)[p(1 \u2212 p)/n^2 ] ???$$ \n",
       "\n",
       "(d) Find the value of c so that $c\\bar{X}(1 \u2212 \\bar{X})$ is an unbiased\n",
       "estimator of $Var(\\bar{X}) = p(1 \u2212 p)/n$.\n",
