finished prob hw

--- a/prob2/Homework 7.ipynb
+++ b/prob2/Homework 7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e3c21805a042ba809327c4e52d6e467abe0d09417947ea8e8652e0feb88e1615"
+  "signature": "sha256:d4e5b3b4051d14631e2b56d14be4f7f20279f8cdca52d62214b34d824d5de5f4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -105,7 +105,7 @@
       "\n",
       "I'm just going to do it for n=1. The general case seems like some rather hairy mathematics, and I'd rather skip it.\n",
       "\n",
-      "$$E(\\hat{\\theta}) = \\int \\frac {ln(x)}{\\theta} x^{(1-\\theta)/\\theta}dx = - \\int \\frac 1 {\\theta} \\frac {x^{(1-\\theta)/\\theta}}{[1 +(1-\\theta)/\\theta]} = \\theta$$\n",
+      "$$E(\\hat{\\theta}) = \\int \\frac {ln(x)}{\\theta} x^{(1-\\theta)/\\theta}dx = - \\int \\frac 1 {\\theta} \\frac {x^{(1-\\theta)/\\theta}}{[1 +(1-\\theta)/\\theta]} dx = \\theta$$\n",
       "\n"
      ]
     },
@@ -182,29 +182,21 @@
       "\n",
       "(a) Show that $\\bar{X} = Y/n$ is an unbiased estimator of p.\n",
       "\n",
-      "$$\\mathbb{E}(\\bar X ) = \\sum_{i= 0}^n \\sum_{x_i = 0}^1  \\frac 1 n  x_i p^{ x_i} (1 - p)^{1 -x_i} = number~of~successes * p/n = ?$$\n",
+      "$$\\mathbb{E}(\\bar X ) = \\frac 1 n \\mathbb{E} \\left[ \\sum_{i = 0}^n x_i \\right] = \\mathbb{E}[x_i] = p$$\n",
       "\n",
       "(b) Show that $Var(\\bar{X}) = p(1 \u2212 p)/n$.\n",
       "\n",
-      "$$\\mathbb{E}(\\bar X^2 ) = \\sum_{i= 0}^n \\sum_{x_i = 0}^1 \\frac 1 {n^2}  x_i^2 p^{x_i} (1 - p)^{1- x_i}  = number~of~successes *p(1-p)/ n^2$$\n",
+      "$$var(\\bar X) = \\frac 1 {n^2} var(\\sum_{i= 0}^n  x_i)  = \\frac 1 n var(x_i) = p(1-p)/n$$\n",
       "\n",
       "(c) Show that $E[\\bar{X}(1 \u2212 \\bar{X})/n] = (n \u2212 1)[p(1 \u2212 p)/n^2 ]$.\n",
       "\n",
-      "$$E[\\bar{X}(1 \u2212 \\bar{X})/n] = E[\\bar{X}]/n -  E(\\bar X^2 ) /n = p/n - p(1-p)/n^2 \\neq (n \u2212 1)[p(1 \u2212 p)/n^2 ] ???$$ \n",
+      "$$E[\\bar{X}(1 \u2212 \\bar{X})/n] = E[\\bar{X}]/n -  E(\\bar X^2 ) /n = p/n - p(1-p)/n^2 +p^2/n = (n \u2212 1)[p(1 \u2212 p)/n^2 ]$$ \n",
       "\n",
       "(d) Find the value of c so that $c\\bar{X}(1 \u2212 \\bar{X})$ is an unbiased\n",
       "estimator of $Var(\\bar{X}) = p(1 \u2212 p)/n$.\n",
       "\n",
-      "$$c = n/(n-1)  ~~~maybe?$$"
+      "$$c = 1/(n-1)$$"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
