finished the prob. homework

--- a/prob2/Homework 9.ipynb
+++ b/prob2/Homework 9.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:707ca1e48915864e58c970219cb08eeae50329857f7e6e0574f3529421da8858"
+  "signature": "sha256:e20c3e1673c88068c57f30ed85abc6f3a9eadc7ddde37c55ddb96f7731ea7827"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -50,7 +50,9 @@
       "\n",
       "<h4>(c) Is the maximum likelihood estimator for $\\sigma^2$ unbiased?</h4>\n",
       "\n",
-      "???"
+      "$$\\mathbb{E}[\\frac 1 N \\sum(x_i)^2] = \\theta$$\n",
+      "\n",
+      "therefore it is an unbiased estimator\n"
      ]
     },
     {
@@ -128,7 +130,7 @@
       "\n",
       "<h4>(b) Find a function of Y that is an unbiased estimator of \u03b8 = 1/p.</h4>\n",
       "\n",
-      "??? I really don't get these unbiased estimators???\n"
+      "$$\\mathbb{E}[\\frac 1 N \\sum x_i] = \\frac 1 p = \\theta$$\n"
      ]
     },
     {
@@ -138,7 +140,7 @@
       "<h3>6.7-10.</h3> <h4>Find a sufficient statistic for \u03b8 , given a random sample, $X_1 , X_2 , . . . , X_n$ , from a distribution with pdf\n",
       "$f (x; \u03b8 ) = \\{\\Gamma (2\\theta )/[ \\Gamma(\u03b8 )]^2 \\}x^{\u03b8 \u22121} (1 \u2212 x)^{ \u03b8 \u22121} $, 0 < x < 1.</h4>\n",
       "\n",
-      "Man... I'm not sure if I'm getting these at all, because it seems totally clear that $\\sum x_i$ is sufficient."
+      "We can write this as a function of $x - x^2$ and therefore $x - x^2$ is a sufficient statistic"
      ]
     }
    ],
