--- a/ML/Spectral.ipynb
+++ b/ML/Spectral.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a36765f8c867a3c8b91c3d170f06183c832984a712dd94fb23f5bbff92007729"
+  "signature": "sha256:10935f46e4749da76820c9cf74c0b1406c64f5718a746436ebf3eb919ee56438"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -706,6 +706,34 @@
       }
      ],
      "prompt_number": 164
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "A = array([[0,0,1,0,0],[0,0,0,1,1],[1,0,0,0,0],[0,1,0,0,1],[0,1,0,1,0]])\n",
+      "L = A.sum(axis = 1)*eye(len(A)) - A\n",
+      "eig(L)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "(array([  2.00000000e+00,   0.00000000e+00,   3.00000000e+00,\n",
+        "          2.88343568e-16,   3.00000000e+00]),\n",
+        " array([[ 0.70710678,  0.70710678,  0.        ,  0.        ,  0.        ],\n",
+        "        [ 0.        ,  0.        ,  0.81649658, -0.57735027,  0.17341435],\n",
+        "        [-0.70710678,  0.70710678,  0.        ,  0.        ,  0.        ],\n",
+        "        [ 0.        ,  0.        , -0.40824829, -0.57735027, -0.77768156],\n",
+        "        [ 0.        ,  0.        , -0.40824829, -0.57735027,  0.60426721]]))"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
