finished all the easy problems

--- a/regression/Problem Set #2.ipynb
+++ b/regression/Problem Set #2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4b672b8b7885a7947954ac5cbb0ed0350376155c813a3a51f4233c1e48bc3509"
+  "signature": "sha256:1dd21dffd97f421b05c7ef1b6cc23401a15f4b58522bb48d77c5cefd66029da3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -166,22 +166,6 @@
      "prompt_number": 39
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -192,7 +176,25 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "$s[Y_h]$ depends on the specific value of $X_h$. It therefore does not make sense to talk about all $Y_h$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "<h3>10</h3>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "a.) Prediction\n",
+      "\n",
+      "b.) Confidence Interval\n",
+      "\n",
+      "c.) Prediction"
      ]
     },
     {
@@ -213,6 +215,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "$\\alpha$ must have been greater than 0.033 for the analyst to reject the null-hypothesis. If $\\alpha$ was 0.01, then the aalyst would have to reject the alternative hypothesis."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "<h3>18</h3>"
      ]
     },
@@ -220,7 +229,21 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "The F-test is only two-sided. The t-test can be one-sided and you can test for hypothesis other than just $\\beta_1 \\neq 0$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "<h3>22</h3>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "I think that it is possible that they are all possible."
      ]
     },
     {
@@ -235,6 +258,13 @@
      "metadata": {},
      "source": [
       "<h3>54</h3>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If $\\beta_1 = 0$ then there is no linear association between X and Y. However, there is clearly an association between Y and X because the variance of Y depends on X."
      ]
     },
     {
