--- a/simulation/Problem Set #3.ipynb
+++ b/simulation/Problem Set #3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:65b8a6e55aee8078f593f0f36342a3a602206dc32a4fe7a2baf13cc1e672a23d"
+  "signature": "sha256:dcb05f5ceaf10e4b6f5bbb226ce92b2d6e90fa8eef59398086355f02158eecb8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,7 +31,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "1.a) An urn contains six balls, numbered 1, 2, ..., 6. Two balls are drawn at\n",
+      "<b>1. a)</b>  An urn contains six balls, numbered 1, 2, ..., 6. Two balls are drawn at\n",
       "random without replacement. What is the probability their sum is an even\n",
       "number less than 7? "
      ]
@@ -66,9 +66,128 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "b) What do you need to change in the program if\n",
-      "sampling is with replacement? "
+      "Analytically, it is simple to show (by straight-forward counting) that the probability is 0.2.\n",
+      "\n",
+      "\n",
+      "<b>b)</b> What do you need to change in the program if\n",
+      "sampling is with replacement? \n",
+      "\n",
+      "Simply replace repl=F with repl=T"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>2. a)</b> What is the probability that the median of three independent random\n",
+      "variables from UNIF(0, 1) falls in the interval (1/4, 3/4)? "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "m <- 10000\n",
+      "outcome <- logical(m)\n",
+      "for (i in 1:m){\n",
+      "    x <- sort(runif(3))\n",
+      "    if(x[2]>1/4 & x[2]<3/4){\n",
+      "        outcome[i] = T\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "mean(outcome)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "[1] 0.6937\n"
+       ]
+      }
+     ],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>(b)</b> Also, what is the probability that the mean of these three observations falls in the same\n",
+      "interval. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "m <- 10000\n",
+      "outcome <- logical(m)\n",
+      "for (i in 1:m){\n",
+      "    x <- mean(runif(3))\n",
+      "    if(x>1/4 & x<3/4){\n",
+      "        outcome[i] = T\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "mean(outcome)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "[1] 0.8568\n"
+       ]
+      }
+     ],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "0.75**3 + (0.75**3)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "0.84375"
+       ]
+      }
+     ],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "1 -(9/8*0.25**2+ 0.25**3)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 34,
+       "text": [
+        "0.9140625"
+       ]
+      }
+     ],
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
