--- a/simulation/Problem Set #3.ipynb
+++ b/simulation/Problem Set #3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dcb05f5ceaf10e4b6f5bbb226ce92b2d6e90fa8eef59398086355f02158eecb8"
+  "signature": "sha256:258805bc38b4a293f61d712846a13f21cf9bf8cfec32e8a0a93ccaeaf92b396b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,7 +31,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<b>1. a)</b>  An urn contains six balls, numbered 1, 2, ..., 6. Two balls are drawn at\n",
+      "<h2>1.</h2> <b>a)</b>  An urn contains six balls, numbered 1, 2, ..., 6. Two balls are drawn at\n",
       "random without replacement. What is the probability their sum is an even\n",
       "number less than 7? "
      ]
@@ -56,11 +56,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "[1] 0.1949\n"
+        "[1] 0.193\n"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -79,7 +79,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<b>2. a)</b> What is the probability that the median of three independent random\n",
+      "<h2>2. </h2><b>a)</b> What is the probability that the median of three independent random\n",
       "variables from UNIF(0, 1) falls in the interval (1/4, 3/4)? "
      ]
     },
@@ -96,7 +96,6 @@
       "        outcome[i] = T\n",
       "    }\n",
       "}\n",
-      "\n",
       "mean(outcome)"
      ],
      "language": "python",
@@ -106,11 +105,11 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "[1] 0.6937\n"
+        "[1] 0.6877\n"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -133,7 +132,6 @@
       "        outcome[i] = T\n",
       "    }\n",
       "}\n",
-      "\n",
       "mean(outcome)"
      ],
      "language": "python",
@@ -143,59 +141,171 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "[1] 0.8568\n"
+        "[1] 0.8578\n"
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Empirically, it is straightforward to get these answers. Analytically figuring out these answers seems to be non-trivial."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<h2>3.</h2> A class has 20 students, and the instructor calls on individual students to\n",
+      "answer questions. For each question she selects one student at random,\n",
+      "without consideration of whom she has called on in the past. Suppose the\n",
+      "instructor asks 40 questions of the class during the term. \n",
+      "\n",
+      "<b>(a)</b> What is the probability that every student is called upon at least once? "
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "0.75**3 + (0.75**3)"
+      "%%R\n",
+      "m <- 10000\n",
+      "outcome <- logical(m)\n",
+      "for (i in 1:m){\n",
+      "    x <- unique(sample(1:20, 40, repl =T))\n",
+      "    if(length(x) == 20){\n",
+      "        outcome[i] <- T        \n",
+      "    }\n",
+      "}\n",
+      "mean(outcome)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 32,
+       "output_type": "display_data",
        "text": [
-        "0.84375"
+        "[1] 0.0373\n"
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>(b)</b> Find the expected number of students she calls on. Also, the standard deviation? "
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "1 -(9/8*0.25**2+ 0.25**3)"
+      "%%R\n",
+      "m <- 10000\n",
+      "outcome <- numeric(m)\n",
+      "for (i in 1:m){\n",
+      "    x <- unique(sample(1:20, 40, repl =T))\n",
+      "    outcome[i] <- length(x)\n",
+      "}\n",
+      "cat(\"mean: \", mean(outcome),\"\\n\")\n",
+      "cat(\"standard deviation: \",sd(outcome),\"\\n\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 34,
+       "output_type": "display_data",
        "text": [
-        "0.9140625"
+        "mean:  17.4419 \n",
+        "standard deviation:  1.262055 \n"
        ]
       }
      ],
-     "prompt_number": 34
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<h2>4.</h2> Theoretically, continuous data have no ties, but in practice rounding is\n",
+      "necessary and can cause ties. \n",
+      "\n",
+      "<b>(a)</b> We sample 25 observations at random\n",
+      "from UNIF(0,1) and round them down to two places (highest possible result\n",
+      "is 0.99). What is the probability of having at least one tie? What is the\n",
+      "average number of ties? "
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "%%R\n",
+      "m <- 10000\n",
+      "outcome <- numeric(m)\n",
+      "for (i in 1:m){\n",
+      "    u <- round(runif(25),2)\n",
+      "    x <- unique(u)\n",
+      "    outcome[i] <- length(x)\n",
+      "}\n",
+      "cat(\"mean number of ties: \", (25 - mean(outcome))/2,\"\\n\")\n",
+      "cat(\"One or more ties: \", mean(outcome<25), \"\\n\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "mean number of ties:  2.7846 \n",
+        "One or more ties:  0.9635 \n"
+       ]
+      }
+     ],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>(b)</b> Same question, but sampling from NORM(0, 1). "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "m <- 10000\n",
+      "outcome <- numeric(m)\n",
+      "for (i in 1:m){\n",
+      "    u <- round(rnorm(25),2)\n",
+      "    x <- unique(u)\n",
+      "    outcome[i] <- length(x)\n",
+      "}\n",
+      "cat(\"mean number of ties: \", (25 - mean(outcome))/2,\"\\n\")\n",
+      "cat(\"One or more ties: \", mean(outcome<25), \"\\n\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "mean number of ties:  0.41035 \n",
+        "One or more ties:  0.5721 \n"
+       ]
+      }
+     ],
+     "prompt_number": 29
     }
    ],
    "metadata": {}
