regression homework essentially done

--- a/regression/Problem Set #2.ipynb
+++ b/regression/Problem Set #2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1dd21dffd97f421b05c7ef1b6cc23401a15f4b58522bb48d77c5cefd66029da3"
+  "signature": "sha256:683e08eda4decbf7cda3018c9ea35293ea1ba259aed730273a11db51a4125aa2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -51,16 +51,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-        "  %reload_ext rpy2.ipython\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 2
     },
     {
@@ -94,7 +85,7 @@
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -133,7 +124,7 @@
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -163,7 +154,49 @@
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "s <- sqrt(MSE*(1/10 + mean(x)^2/sum((x-mean(x))^2)))\n",
+      "cat('d.)', (b_0 - 9)/s,'which has p-value', 1 -pt((b_0 - 9)/s,8),'which is above 0.05')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "d.) 1.809068 which has p-value 0.05402227 which is above 0.05"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%R sqrt(MSE/sum((x-mean(x))^2))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "<FloatVector - Python:0xb515aeac / R:0x9d2fae8>\n",
+        "[0.469042]"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -203,6 +236,73 @@
      "source": [
       "<h3>15</h3>"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "cat('y estimated', b_0 +b_1*2,'\\n')\n",
+      "s_sq <- MSE*(1/10 + (2 - mean(x))^2/sum((x-mean(x))^2))\n",
+      "cat(s_sq,qt(0.995,8) ,' Thus, ', b_0 +b_1*2 - sqrt(s_sq)*qt(0.995,8), b_0 +b_1*2 + sqrt(s_sq)*qt(0.995,8))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "y estimated 18.2 \n",
+        "0.44 3.355387  Thus,  15.97429 20.42571"
+       ]
+      }
+     ],
+     "prompt_number": 29
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "cat('y estimated', b_0 +b_1*2,'\\n')\n",
+      "s_sq <- MSE*(1 + 1/10 + (2 - mean(x))^2/sum((x-mean(x))^2))\n",
+      "cat(s_sq,qt(0.995,8) ,' Thus, ', b_0 +b_1*2 - sqrt(s_sq)*qt(0.995,8), b_0 +b_1*2 + sqrt(s_sq)*qt(0.995,8))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "y estimated 18.2 \n",
+        "2.64 3.355387  Thus,  12.74814 23.65186"
+       ]
+      }
+     ],
+     "prompt_number": 30
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "Wish <- sqrt(2*qf(0.99,2,8))*sqrt(MSE*(1/10 + (2 - mean(x))^2/sum((x-mean(x))^2)))\n",
+      "cat(18.2- Wish, 18.2+Wish)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "15.44116 20.95884"
+       ]
+      }
+     ],
+     "prompt_number": 33
     },
     {
      "cell_type": "markdown",
@@ -252,6 +352,59 @@
      "source": [
       "<h3>25</h3>"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "a <- aov(y~x)\n",
+      "summary(a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "            Df Sum Sq Mean Sq F value   Pr(>F)    \n",
+        "x            1  160.0   160.0   72.73 2.75e-05 ***\n",
+        "Residuals    8   17.6     2.2                     \n",
+        "---\n",
+        "Signif. codes:  0 \u2018***\u2019 0.001 \u2018**\u2019 0.01 \u2018*\u2019 0.05 \u2018.\u2019 0.1 \u2018 \u2019 1\n"
+       ]
+      }
+     ],
+     "prompt_number": 40
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%R\n",
+      "sum((y-mean(y))^2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "[1] 177.6\n"
+       ]
+      }
+     ],
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "markdown",
